--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
 <html>
+  <head>
+    <title>64bit4</title>
+  </head>
+  <body>
+    <iframe src="http://static.arcadespot.com/embed/sonic-mania-edition/">
+  </body>
 </html>
