--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>64bit4</title>
   </head>
   <body>
-    <iframe src="http://static.arcadespot.com/embed/sonic-mania-edition/">
+    <iframe src="https://static.arcadespot.com/embed/sonic-mania-edition/">
   </body>
 </html>
