--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>64bit4</title>
   </head>
   <body>
-    <iframe src="https://static.arcadespot.com/embed/sonic-mania-edition/">
+    <iframe height="100%" width="100%" border="0" frameborder="0" scrolling="no" allowfullscreen="allowfullscreen" id="gameFrame" src="//static.arcadespot.com/embed/sonic-mania-edition/?platform&amp;responsive"></iframe>
   </body>
 </html>
