--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <iframe height="100%" width="100%" border="0" frameborder="0" scrolling="no" allowfullscreen="allowfullscreen" id="64frame" src=""></iframe>
     <script>
       var iframe_url = "//static.arcadespot.com/embed/sonic-mania-edition/?platform&amp;responsive"
-      window.setTimeout(function () {var iframe = document.getElementById('64frame'); iframe.setAttribute('src', iframe_url); iframe.contentWindow.location.reload();	}, 2000); 
+      window.setTimeout(function () {var iframe = document.getElementById('64frame'); iframe.setAttribute('src', iframe_url); }, 2000); 
     </script>
   </body>
 </html>
